src/objects/Prize__c.object
<CustomObject>
    <fields>
        <fullName>Awarded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Awarded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contest__c</fullName>
        <label>Contest</label>
        <referenceTo>Contest__c</referenceTo>
        <relationshipLabel>Prizes</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prize_Image__c</fullName>
        <label>Prize Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <formula>Quantity__c *  Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Prize</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prize Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prizes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>